DeploymentStaging/deployPackage/objects/HOG_Damage__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Damage_Code__c</fullName>
        <description>Condition Code</description>
        <label>Damage Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damage_Description__c</fullName>
        <description>Condition Description</description>
        <label>Damage Description</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Code__c</fullName>
        <description>Part Code from Part, equivalent to Damage Code Group</description>
        <label>Part Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Damage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Damage_Code__c</columns>
        <columns>Damage_Description__c</columns>
        <columns>Part_Code__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Damage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Damages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>